fix: address review findings — SCAN count, callerRole removal, JSON serialization, jq check, contentPath removal